--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,7 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Work Sans';
+  font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   padding: 0;
@@ -19,6 +18,10 @@ li {
   list-style: none;
 }
 
-/* Imported CSS */
-@import url('./App.scss');
-@import url('./pages.scss');
+a {
+  text-decoration: none;
+}
+
+/* Imported SCSS */
+@import "App";
+@import "pages";
