--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -6,14 +6,20 @@
 .header {
   background: #fff;
   padding: 10px 30px;
+  box-shadow: 2px 1px 1px #f1f1f1;
+  position: sticky;
+  top: 0;
+  left: 0;
 }
 .nav {
   background-color: #fff;
-  width: 15%;
+  width: 17%;
   height: 100vh;
-  padding: 6px 30px;
+  padding: 18px 30px;
+  box-shadow: 2px 1px 1px #f1f1f1;
+  overflow-y: auto;
 }
 .app-page {
-  width: 85%;
+  width: 83%;
   height: max-content;
 }
