--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
+
 body {
   margin: 0;
-  font-family: 'Work Sans';
+  font-family: 'Open Sans', sans-serif;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
