--- a/src/styles/pages.scss
+++ b/src/styles/pages.scss
@@ -1,20 +1,42 @@
+$tcGreen: #39CDCC;
+
+
 // Header
+.search-icon {
+    background-color: $tcGreen;
+    color: #fff;
+}
 .header-nav-list {
     display: flex;
+    justify-content: end;
+    margin-top: 10px;
+
+    li {
+        margin-left: 15px;
+        text-align: center;
+        font-size: 14px;
+        text-transform: capitalize;
+
+        img {
+            width: 25px;
+        }
+    }
 }
 
 // Sidenav
 .link-switch {
     margin-bottom: 10px;
 }
+
 .link-switch a {
     display: block;
     margin-bottom: 15px;
 }
 
-.nav-section{
+.nav-section {
     margin-bottom: 15px;
 }
+
 .nav-section h6 {
     display: inline;
     font-weight: 600;
@@ -36,7 +58,7 @@
 
 .nav-section ul li a,
 .link-switch a {
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 400;
     color: #213F7D;
     line-height: 19px;
@@ -58,4 +80,39 @@
 .forgot-pass {
     font-size: 12px;
     color: #39CDCC
+}
+
+
+// DASHBOARD
+.page-tag {
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 28px;
+    letter-spacing: 0px;
+    text-align: left;
+    color: #213F7D;
+    margin-bottom: 25px;
+}
+
+.cardicon h6 {
+    font-family: Work Sans;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 16px;
+    letter-spacing: 0em;
+    text-align: left;
+    text-transform: uppercase;
+    color: #545F7D;
+    margin-top: 16px;
+    margin-bottom: 10px;
+}
+
+.cardicon h5 {
+    font-family: Work Sans;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 28px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #213F7D;
 }
