--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,6 +2,7 @@
   width: 100%;
   min-height: 100vh;
   background-color: #FBFBFB;
+  position: relative;
 }
 .header {
   background: #fff;
@@ -10,11 +11,13 @@
   position: sticky;
   top: 0;
   left: 0;
+  height: 70px;
 }
 .nav {
+  // position: fixed;
   background-color: #fff;
   width: 17%;
-  height: 100vh;
+  height: calc(100vh - 70px);
   padding: 18px 30px;
   box-shadow: 2px 1px 1px #f1f1f1;
   overflow-y: auto;
@@ -22,4 +25,7 @@
 .app-page {
   width: 83%;
   height: max-content;
+  // position: ;
+  height: calc(100vh - 70px);
+  overflow-y: auto;
 }
