--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -25,6 +25,13 @@ a {
   text-decoration: none;
 }
 
+::-webkit-scrollbar{
+  width: 10px
+}
+::-webkit-scrollbar-thumb {
+  color: #fff
+}
+
 /* Imported SCSS */
 @import "App";
 @import "pages";
